# dummyRustWasmVite

./: .gitignore  Cargo.toml  Changelog.md  License.txt  ReadMe.md  index.html  manifest.json  package.json  vite.config.js  webdriver.json  windi.config.ts
.cargo/: config.toml
src/: lib.rs  style.rs  util.rs
src/background/: Cargo.toml
src/background/src/: lib.rs
src/components/: Logo.tsx  logo.rs
src/components/__tests__/: logo_test.rs
src/composables/: use_storage_local.rs
src/logic/: storage.rs
src/options/: Cargo.toml  Options.tsx  index.html
src/options/src/: lib_opt.rs
src/patch/web-extensions-sys/src/: storage.rs
src/popup/: Cargo.toml  Popup.tsx  index.html  popup_windi.html
src/popup/src/: lib_pop.rs  popup.rs
src/storage_web_ext/: Cargo.toml
src/storage_web_ext/src/: errors.rs  lib_store.rs  local_storage.rs  session_storage.rs
src/storage_web_ext/tests/: local_storage.rs  session_storage.rs
src/styles/: main.css
