[package]
name       	= "rust_wasm_vite_dummy"
version    	= "0.1.0"
description	= "Rust → WASM via Vite (dummy repo)"
authors    	= ["x"]
categories 	= ["wasm"]
readme     	= "ReadMe.md"
license    	= "MIT"
edition    	= "2021"

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
wasm-bindgen            	= "0.2.81"
console_error_panic_hook	= "0.1.7"
dominator               	= "0.5.27"
futures-signals         	= "0.3.28"
once_cell               	= "1.13.0"

[profile.release]
panic        	= 'abort'	# Do not perform backtrace for panic on release builds
codegen-units	= 1      	# Perform optimizations on all codegen units
opt-level    	= 'z'    	# Optimize for size 's' or 'z' "aggressively", 3 fast
lto          	= true   	# Enable link time optimization

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]  # O4 fast, Oz/Os small
