[package]
name       	= "background"
version    	= "0.1.0"
description	= "Background page for the Rust → WASM via Vite (dummy repo)"
authors    	= ["x"]
edition    	= "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen            	= "0.2.82"	# wasm «» JS
js-sys                  	= "0.3.58"	# [wasm-bindgen] bindings to JS global APIs
wasm-bindgen-futures    	= "0.4.31"	# Rust Future «» JS Promise
dominator               	= "0.5.27"	# DOM lib (declarative + FRP signals)
console_error_panic_hook	= "0.1.7" 	# wasm panic message → console.error
futures-signals         	= "0.3.30"	#
once_cell               	= "1.13.0"	#
rust_wasm_vite_dummy    	= {path="../.."}

# web-extension = { path = "../../web-extension" }
# wasm-bindgen = "0.2.45"
# futures = { version = "0.3.0", features = ["async-await"] }
# serde_json = "1.0.40"
# uuid = { version = "1.1.1", features = ["serde", "v4", "js"] }
# serde = { version = "1.0.36", features = ["derive"] }
# gloo-timers = { version = "0.2.1", features = ["futures"] }

[dependencies.web-sys]
version = "0.3.58"
features = [
  "console",
]
