[package]
name       	= "options"
version    	= "0.1.0"
description	= "Options page for the Rust → WASM via Vite (dummy repo)"
authors    	= ["x"]
edition    	= "2021"

[lib]
crate-type	= ["cdylib"]
path      	= "src/lib_opt.rs"

[dependencies]
wasm-bindgen            	= "0.2.82"	# wasm«»JS
js-sys                  	= "0.3.58"	# [wasm-bindgen] bindings to JS global APIs
web-extensions-sys      	= "0.2.0" 	# [wasm-bindgen] bindings to JS APIs for WebExtensions
wasm-bindgen-futures    	= "0.4.31"	# Rust Future «» JS Promise
dominator               	= "0.5.28"	# DOM lib (declarative + FRP signals)
console_error_panic_hook	= "0.1.7" 	# wasm panic message → console.error
futures-signals         	= "0.3.30"	#
once_cell               	= "1.13.0"	#
rust_wasm_vite_dummy    	= {path="../.."}

# web-extension = { path = "../../web-extension" }
# futures = "0.3.0"

[dependencies.web-sys]
version = "0.3.58"
features = [
  "console",
  # "HtmlTextAreaElement",
]
