[package]
name       	= "popup"
version    	= "0.1.0"
description	= "Popup page for the Rust → WASM via Vite (dummy repo)"
authors    	= ["x"]
edition    	= "2021"

[lib]
crate-type	= ["cdylib"]
path      	= "src/lib_pop.rs"

[dependencies]
wasm-bindgen            	= "0.2.82"	# wasm «» JS
js-sys                  	= "0.3.58"	# [wasm-bindgen] bindings to JS global APIs
# web-extensions-sys    	= "0.2.0" 	# [wasm-bindgen] bindings to JS APIs for WebExtensions
web-extensions-sys      	= {path   	= "../patch/web-extensions-sys"}
wasm-bindgen-futures    	= "0.4.31"	# Rust Future «» JS Promise
dominator               	= "0.5.28"	# DOM lib (declarative + FRP signals)
console_error_panic_hook	= "0.1.7" 	# wasm panic message → console.error
futures-signals         	= "0.3.30"	#
futures                 	= {version	="0.3.21", features=["async-await"] }
once_cell               	= "1.13.0"	#
rust_wasm_vite_dummy    	= {path="../.."}
storage_web_ext         	= {path="../storage_web_ext"}
serde_json              	= "1.0.82"

# web-extension = { path = "../../web-extension" }
# wasm-bindgen = "0.2.45"
# uuid = { version = "1.1.1", features = ["serde", "v4", "js"] }
# serde = { version = "1.0.36", features = ["derive"] }
# gloo-timers = { version = "0.2.1", features = ["futures"] }

[dependencies.web-sys]
version = "0.3.58"
features = [
  "console",
  "Document","Element", # to use getElementById() method
  # "HtmlElement",


  'HtmlElement',
  'HtmlBodyElement',
  'Node',
  'NodeList',
  'Window',
]
