[package]
name       	= "gloo-storage-web-ext"
description	= "Convenience crate for working with storage areas (local, but not session/managed/sync) in browser"
version    	= "0.0.1"
authors    	= ["Rust and WebAssembly Working Group"]
edition    	= "2021"
license    	= "MIT OR Apache-2.0"
readme     	= "README.md"
#repository	= "https://github.com/rustwasm/gloo/tree/master/crates/storage"
#homepage  	= "https://github.com/rustwasm/gloo"
categories 	= ["api-bindings", "storage", "wasm"]

[dependencies]
wasm-bindgen      	= { version = "0.2", features = ["serde-serialize"] }
serde             	= "1.0"
serde_json        	= "1.0"
thiserror         	= "1.0"
js-sys            	= "0.3"
gloo-utils        	= "0.1"
web-extensions-sys	= "0.1.0"	# [wasm-bindgen] bindings to JS APIs for WebExtensions
[dependencies.web-sys]
version 	= "0.3"
features	= [
  "Storage",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test	= "0.3.32"
serde            	= { version = "1.0", features = ["derive"] }
