[package]
name       	= "storage_web_ext"
description	= "Convenience crate for working with storage areas (local, but not session/managed/sync) in browser"
version    	= "0.0.1"
authors    	= ["Rust and WebAssembly Working Group"]
edition    	= "2021"
license    	= "MIT OR Apache-2.0"
readme     	= "README.md"
#repository	= "https://github.com/rustwasm/gloo/tree/master/crates/storage"
#homepage  	= "https://github.com/rustwasm/gloo"
categories 	= ["api-bindings", "storage", "wasm"]

[lib]
path	= "src/lib_store.rs"

[dependencies]
wasm-bindgen        	= { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures	= "0.4.31"	# [wasm-bindgen] Rust Future «» JS Promise
web-extensions-sys  	= "0.2.0" 	# [wasm-bindgen] bindings to JS APIs for WebExtensions
serde               	= "1.0.141"
serde_json          	= "1.0.82"
thiserror           	= "1.0.31"
js-sys              	= "0.3.59"
gloo-utils          	= "0.1.4"
async-trait         	= "0.1.57"	# use async fn in traits
rust_wasm_vite_dummy	= {path="../.."}

[dependencies.web-sys]
version 	= "0.3"
features	= [
  "Storage",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test	= "0.3.32"
serde            	= { version = "1.0", features = ["derive"] }
